--- a/src/match.css
+++ b/src/match.css
@@ -21,3 +21,61 @@
 	font-size: 50px;
 	
 }
+
+.bord{
+	border-color: var(--txt);
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 12px;
+}
+
+.row{
+	text-align: center;
+	display:flex;
+	flex-direction:row;
+	
+}
+
+.col{
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	
+}
+
+.row-item{
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
+#view{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	
+	min-width: 250px;
+	min-height: 480px;
+	
+	
+}
+
+
+
+#field{
+	flex: 1;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 12px;
+	width: 95%;
+	min-height: 350px;
+	max-height: 400px;
+}
+
+#hand{
+	flex: 1;
+	margin-left: auto;
+	margin-right: auto;
+	width: 95%;
+	min-height: 100px;
+	max-height: 200px;
+}
