--- a/src/match.css
+++ b/src/match.css
@@ -84,7 +84,7 @@
 }
 .player-nick{
 	background-color: #aabbcc00;
-	font-size: 14px;
+	font-size: 10px;
 }
 .player-lance{
 	
@@ -96,36 +96,12 @@
 
 
 .player-field{
-	flex: 1;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 10px;
 	
 }
-.field-card{
-	--v: 0;
-	margin : 2px;
-	
-	display:flex;
-	flex-direction:column;
-	align-items: center;
-	justify-content:center;
-	
-	
-	background-color: var(--bg);
-	
-	
-	border-color:var(--txt);
-	border-style: solid;
-	border-width: 2px;
-	border-radius: 8px;
-	
-	
-	color: yellow;
-	width: 35px;
-	height: 60px;
-	animation: ttremilique 0.4s linear alternate infinite;
-	transition: background-color 0.65s, color 0.2;
-	
-}
+
 
 .name{
 	font-weight: thin;
@@ -150,13 +126,7 @@
 }
 
 .my-lance-wrapper{
-	margin-right: 20px;
-	margin-left: 20px;
-	min-width: 120px;
-	
-	display: flex;
-	vertical-align: middle;
-	flex-direction: column;
+	min-width: 80px;
 	justify-content: space-evenly;
 	background-color: #aabbcc00;
 	
@@ -180,10 +150,9 @@
 	font-weight: bolder;
 	font-size: 16px;
 	border-radius: 10px; 
-	flex: 1;
-	margin: auto;
 	
-	width: 90px;	
+	
+	width: 40px;	
 	
 	background-color: #aabbcc00;
 	color: var(--bg);
@@ -236,25 +205,61 @@
 	}
 }
 
-.field-card:hover{
-	background-color: var(--txt);
-	color: #aabbccff;
-	animation: flip 1s;
+.card{
+	
+	margin : 2px;
+	
+	display: flex;
+	flex-direction:column;
+	align-items: center;
+	justify-content:center;
+	
+	
+	background-color: var(--bg);
+	
+	
+	border-color:var(--txt);
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 8px;
+	
+	
+	color: yellow;
+	width: 35px;
+	height: 55px;
+	animation: ttremilique 0.4s linear alternate infinite;
+	transition: background-color 0.65s, color 0.2;
+	
 }
-.field-card:hover[k]{
-	animation: flip-k 1s;
 
+.card[h]{
+	transform: translateY(80%);
+}
+
+.card[u][h]{
+	transform: translateY(20%);
 }
 
 
 
+body{
+	background-color: #aabbcc00;
+	justify-self: center;
+	display: flex;
+	justify-content: center;
+	width: 98%;
+	height: 100%;
+}
 
 #view{
+	margin-left: auto;
+	margin-right: auto;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	
-	min-width: 250px;
-	min-height: 480px;
+	min-width: 100%;
+	height: 560px;
+	
 	
 	
 }
@@ -265,23 +270,31 @@
 	flex: 1;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 12px;
-	width: 95%;
-	min-height: 350px;
-	max-height: 400px;
+	margin-bottom: 5px;
+	
+	min-height: 337px;
 }
 
 #panel{
-	display: flex;
-	justify-content: center;
-	flex: 1;
-	margin-left: auto;
-	margin-right: auto;
-	width: 95%;
-	min-height: 100px;
-	max-height: 200px;
 	
+
+	border-color: #aabbcc00;
+	border-style: solid;
+	border-width: 2px;
+	border-radius: 12px;
 	
+	height: 120px;
+	width: 90%;
 	color: var(--bg);
-	background-color: var(--softBg);
+	background-color: var(--txt);
+
+
+}
+
+#lance-n{
+	font-size: 20px;
+	font-weight: 700;
+	background-color: var(--txt);
+	color: var(--bg);
+
 }
